# NeuroKit

./: README.md  Readme.md  projects.toml  pyproject.toml
.github/workflows/: ci.yml
NeuroKit/: __init__.py  api.py  convo.py  core.py  health.py  registration.py  setup.py  signals.py  utils.py
neurokit/: __init__.py  audit.py  bootstrap.py  client.py  conductor.py  config.py  contract.yaml  convo.py  envalope.py  envelope.py  health.py  health_api.py  heartbeat.py  init.py  models.py  rabbitmq.py  rbac.py  register.py  secrets.py  service.py  setup.py  start_server.py  test_syntax.py  utils.py  vault.py
neurokit/docker/: Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml  entrypoint.py
tests/: test_config.py  test_envelope.py  test_registration.py
