[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurokit"
version = "0.1.0"
description = "NeuroNetwork component API"
authors = [{name = "Billy Felton", email = "billy@halo.inc"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika",
    "flask",
    "python-consul",
    "psutil",
]

[project.optional-dependencies]
dev = ["pytest", "black"]
