[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "neurokit"
version = "0.3.0"
description = "NeuroKit library for neuro-network integration"
authors = ["Billy Felton <billy@felton.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"
pika = "^1.3.2"
psutil = "^6.0.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
